# pfds

./: Errata.md  LICENSE  README.md  pfds.cabal
src/Struct/Heap/: SkewHeap.hs
src/Struct/Interfaces/: Heap.hs  IndexedList.hs  Queue.hs
src/Struct/Internal/: CompleteBinaryTree.hs  SkewBinomialTree.hs
src/Struct/List/: SkewList.hs
src/Struct/Queue/: Deque.hs  Queue.hs
test/: RunTests.hs  SkewHeapProps.hs  SkewListProps.hs
